src/objects/c2g__InquiryTemplateTransposeDrill__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__InquiryTemplateColumn__c</fullName>
        <label>Inquiry Template Column</label>
        <referenceTo>c2g__InquiryTemplateColumn__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__TransposeItemValue__c</fullName>
        <label>Value</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransposeItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dataview Transpose Item</label>
        <referenceTo>c2g__DataViewTransposeItem__c</referenceTo>
        <relationshipName>TransposeDrillTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>zDeprecated:Inquiry Template Transpose</label>
    <nameField>
        <displayFormat>ITTD-{0000}</displayFormat>
        <label>Inquiry Template Transpose Drill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Template Transpose Drills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>